flanterm/src/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct flanterm_context {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn flanterm_write(
        ctx: *mut flanterm_context,
        buf: *const ::core::ffi::c_char,
        count: usize,
    );
}
unsafe extern "C" {
    pub fn flanterm_flush(ctx: *mut flanterm_context);
}
unsafe extern "C" {
    pub fn flanterm_full_refresh(ctx: *mut flanterm_context);
}
unsafe extern "C" {
    pub fn flanterm_deinit(
        ctx: *mut flanterm_context,
        _free: ::core::option::Option<
            unsafe extern "C" fn(ptr: *mut ::core::ffi::c_void, size: usize),
        >,
    );
}
unsafe extern "C" {
    pub fn flanterm_get_dimensions(ctx: *mut flanterm_context, cols: *mut usize, rows: *mut usize);
}
unsafe extern "C" {
    pub fn flanterm_set_autoflush(ctx: *mut flanterm_context, state: bool);
}
unsafe extern "C" {
    pub fn flanterm_set_callback(
        ctx: *mut flanterm_context,
        callback: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut flanterm_context,
                arg2: u64,
                arg3: u64,
                arg4: u64,
                arg5: u64,
            ),
        >,
    );
}
unsafe extern "C" {
    pub fn flanterm_get_oob_output(ctx: *mut flanterm_context) -> u64;
}
unsafe extern "C" {
    pub fn flanterm_set_oob_output(ctx: *mut flanterm_context, oob_output: u64);
}
unsafe extern "C" {
    pub fn flanterm_fb_init(
        _malloc: ::core::option::Option<
            unsafe extern "C" fn(size: usize) -> *mut ::core::ffi::c_void,
        >,
        _free: ::core::option::Option<
            unsafe extern "C" fn(ptr: *mut ::core::ffi::c_void, size: usize),
        >,
        framebuffer: *mut u32,
        width: usize,
        height: usize,
        pitch: usize,
        red_mask_size: u8,
        red_mask_shift: u8,
        green_mask_size: u8,
        green_mask_shift: u8,
        blue_mask_size: u8,
        blue_mask_shift: u8,
        canvas: *mut u32,
        ansi_colours: *mut u32,
        ansi_bright_colours: *mut u32,
        default_bg: *mut u32,
        default_fg: *mut u32,
        default_bg_bright: *mut u32,
        default_fg_bright: *mut u32,
        font: *mut ::core::ffi::c_void,
        font_width: usize,
        font_height: usize,
        font_spacing: usize,
        font_scale_x: usize,
        font_scale_y: usize,
        margin: usize,
        rotation: ::core::ffi::c_int,
    ) -> *mut flanterm_context;
}
unsafe extern "C" {
    pub fn flanterm_fb_set_flush_callback(
        ctx: *mut flanterm_context,
        flush_callback: ::core::option::Option<
            unsafe extern "C" fn(address: *mut ::core::ffi::c_void, length: usize),
        >,
    );
}